# Math6370-codes

./: .gitignore  LICENSE  Problems.md  README.md  build_from_raja_template.txt  deviceQuery_behemoth.sh
HYPRE/: Makefile  README.md  hypre_test.cpp  hypre_test2.cpp  hypre_test2_fd.cpp  hypre_test_fd.cpp  input_params.txt  input_params2.txt  setup_asymptote.sh  setup_behemoth.sh  setup_stampede2.sh
MPI_on_stampede/: Makefile  direct_main.cpp  direct_main.f90  input_direct.txt  input_iterative.txt  iterative_main.cpp  iterative_main.f90  jacobi_solve.cpp  jacobi_solve.f90  linresid.cpp  linresid.f90  tridiag_solve.cpp  tridiag_solve.f90
advection/: CMakeLists.txt  Makefile  advection.c  advection.cpp  advection.f90  advection.h  advection.hpp  advection.m  advection_1sided.cpp  advection_1sided.h  advection_1sided.hpp  advection_hybrid.cpp  advection_mpi.c  advection_mpi.cpp  advection_mpi.f90  advection_mpi.h  advection_mpi.hpp  advection_omp.c  advection_omp.cpp  advection_omp.f90  check_err.c  check_tests_mpi.m  cleanup.sh  exchange.c  exchange.cpp  exchange.f90  exchange.h  exchange_1sided.cpp  get_time.f90  initialize.c  initialize.cpp  initialize.f90  initialize_1sided.cpp  initialize_mpi.c  initialize_mpi.cpp  initialize_mpi.f90  input.txt  output.c  output.cpp  output.f90  (+8 more)
advection/src/: CMakeLists.txt  advection.cpp  advection.hpp  advection_hybrid.cpp  initialize.cpp  output.cpp
axpy/: CMakeLists.txt  Makefile  axpy.c  axpy.cpp  axpy.f90  axpy_omp.c  axpy_omp.cpp  axpy_omp.f90  cleanup.sh  demo.txt  omp_tests.sh  runtests_behemoth.sh  runtests_m2.sh
axpy/src/: CMakeLists.txt  axpy.cpp  get_time.c  get_time.h
chemistry/: CMakeLists.txt  MPI_versions.txt  Makefile  blt  chem_solver.c  chem_solver.cpp  chem_solver.f90  chem_solver.m  chem_solver_lambda.cpp  chem_solver_orphan.c  chem_solver_orphan.cpp  chem_solver_orphan.f90  chemistry.c  chemistry.cpp  chemistry.f90  chemistry.m  chemistry_hybrid.cpp  chemistry_mpi.c  chemistry_mpi.cpp  chemistry_mpi.f90  chemistry_mpi2.c  chemistry_mpi2.cpp  chemistry_mpi2.f90  chemistry_mpi3.c  chemistry_mpi3.cpp  chemistry_mpi3.f90  chemistry_omp.c  chemistry_omp.cpp  chemistry_omp.f90  chemistry_omp2.c  chemistry_omp2.cpp  chemistry_omp2.f90  cleanup.sh  demo.txt  hybrid_tests.py  omp_tests.sh  runtests_behemoth.sh  runtests_m2.sh  tpl
chemistry/src/: CMakeLists.txt  chemistry.cpp
dot_prod/: CMakeLists.txt  Makefile  cleanup.sh  demo.txt  dot_prod.c  dot_prod.cpp  dot_prod.f  dot_prod.f90  dot_prod.m  dot_prod_mpi.c  dot_prod_mpi.cpp  dot_prod_mpi.f90  dot_prod_mpi_fancy.c  dot_prod_mpi_fancy.cpp  dot_prod_mpi_fancy.f90  dot_prod_mpi_noreduce.c  dot_prod_mpi_noreduce.cpp  dot_prod_mpi_noreduce.f90  dot_prod_mpi_simple.c  dot_prod_mpi_simple.cpp  dot_prod_mpi_simple.f90  dot_prod_omp.c  dot_prod_omp.cpp  dot_prod_omp.f90  dot_prod_omp2.c  dot_prod_omp2.cpp  dot_prod_omp2.f90  dot_prod_omp_simple.c  dot_prod_omp_simple.cpp  dot_prod_omp_simple.f90  mpi_tests.sh  omp_tests.sh  runtests_behemoth.sh  runtests_m2.sh
dot_prod/src/: CMakeLists.txt  dot_prod.cpp
global_min/: CMakeLists.txt  Makefile  cleanup.sh  get_time.c  get_time.f90  get_time.h  glob_min.c  glob_min.cpp  glob_min.f90  glob_min2.c  glob_min2.cpp  glob_min2.f90  glob_min_omp.c  glob_min_omp.cpp  glob_min_omp.f90  omp_tests.sh  runtests_behemoth.sh  runtests_m2.sh
global_min/src/: CMakeLists.txt  glob_min.cpp
laplace/: Makefile  driver.c  driver.cpp  driver.f90  input.txt  laplace2d.h  laplace2d.hpp  linresid2D_mpi_async.c  linresid2D_mpi_async.cpp  linresid2D_mpi_async.f90  linresid2D_mpi_sync.c  linresid2D_mpi_sync.cpp  linresid2D_mpi_sync.f90
matvec/: Makefile  demo.txt  matvec_col.c  matvec_col.cpp  matvec_col.f90  matvec_mpi1.c  matvec_mpi1.cpp  matvec_mpi1.f90  matvec_mpi2.c  matvec_mpi2.cpp  matvec_mpi2.f90  matvec_mpi3.c  matvec_mpi3.cpp  matvec_mpi3.f90  matvec_omp.c  matvec_omp.cpp  matvec_omp.f90  matvec_row.c  matvec_row.cpp  matvec_row.f90  mpi_tests.sh  omp_tests.sh
memory_leak/: Makefile  memleak.cpp  memleak_func.cpp  running_with_valgrind.txt
omp_benchmarking/: Makefile  README  arraydelay.c  gtod.c  schedbench.c
omp_schedule/: Makefile  omp_schedule.c  omp_schedule.cpp  omp_schedule.f90
pi/: CMakeLists.txt  Makefile  blt  cleanup.sh  demo.txt  get_time.c  mpi_tests.sh  omp_tests.sh  pi_comp.c  pi_comp.cpp  pi_comp.f90  pi_comp.m  pi_comp_mpi.c  pi_comp_mpi.cpp  pi_comp_mpi.f90  pi_comp_mpi_simple.c  pi_comp_mpi_simple.cpp  pi_comp_mpi_simple.f90  pi_comp_omp.c  pi_comp_omp.cpp  pi_comp_omp.f90  pi_comp_omp_crit.c  pi_comp_omp_crit.cpp  pi_comp_omp_crit.f90  pi_comp_omp_simple.c  pi_comp_omp_simple.cpp  pi_comp_omp_simple.f90  runtests_behemoth.sh  runtests_m2.sh
pi/src/: CMakeLists.txt  pi_comp.cpp
raja-template/tpl/raja/scripts/radiuss-spack-configs/blueos_3_ppc64le_ib/: packages.yaml
raja-template/tpl/raja/scripts/radiuss-spack-configs/toss_3_x86_64_ib/: packages.yaml
reused/: get_time.c  get_time.f90  get_time.h
simple/: Makefile  simple.c  simple.cpp  simple.f90
